Fix header visibility in workflow canvas: change demo-container to relative positioning and add proper z-index layering

--- a/packages/workflow-canvas/src/styles/index.css
+++ b/packages/workflow-canvas/src/styles/index.css
@@ -59,7 +59,7 @@
 }
 
 .demo-container {
-  position: absolute;
+  position: relative;
   left: 0px;
   top: 0px;
   display: flex;
